# basestation-game

./: .gitignore  .gitmodules  Basebar.svg.import  CameraDisplay.svg.import  Light.tres  MAIN.tscn  PackageInclude.txt  README.md  README2.txt  RecompileC#.sh  StreamMounter.cs  basestation-game.csproj  basestation-game.csproj.old  basestation-game.csproj.old.2  basestation-game.csproj.old.3  basestation-game.csproj.old.4  basestation-game.sln  basestationgame.sh  cam_button.tscn  control.tres  control.tscn  export_presets.cfg  flake.nix  icon.svg.import  image.png.import  packages.lock.json  project.godot  result  ros_pl_calculator.py  small_panel.tscn  start_rosbridge.sh  tabselected.tres
.zed/: settings.json
Assets/: BioArm.png.import  CameraDisplay.svg.import  Commit.png.import  CommitPressed.png.import  Compass.png.import  Crosshair.png.import  End Effector.png.import  Fan.png.import  Forearm.png.import  Heading_Indicator.png.import  Lance.png.import  Laser.png.import  Needle.png.import  Pin.png.import  Servo.png.import  Speedometer-1-874559948.png.import  Tank.png.import  TestTube.png.import  Upper arm.png.import  clucky.png.import  icon.svg.import  pump.png.import  tire brake.png.import  tire profile.png.import
PTZ/: PTZ.obj.import  PTZaxis1.obj.import  PTZaxis2.obj.import  (+1 more)
ROS/Compiler/astra_msgs/: .gitignore  CMakeLists.txt  README.md  flake.nix  overlay.nix  package.nix  package.xml  shell.nix
ROS/Compiler/astra_msgs/action/: BioVacuum.action
ROS/Compiler/astra_msgs/msg/control/: ArmManual.msg  AutoNav.msg  BioControl.msg  CoreControl.msg  PtzControl.msg
ROS/Compiler/astra_msgs/msg/feedback/: BioFeedback.msg  CoreFeedback.msg  MaculaFeedback.msg  PtzFeedback.msg
ROS/Compiler/astra_msgs/msg/new_control/: BioDistributor.msg  CoreCtrlState.msg  VicCAN.msg
ROS/Compiler/astra_msgs/msg/new_feedback/: ArmFeedback.msg  Barometer.msg  BoardVoltage.msg  NewCoreFeedback.msg  RevMotorState.msg
ROS/Compiler/astra_msgs/srv/: BioTestTube.srv
(+265 files in other folders)
